--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -13,16 +13,27 @@
         android:adjustViewBounds="true"
         android:maxWidth="100dp"
         android:maxHeight="600dp"
-        android:scaleType="fitCenter"/>
+        android:layout_gravity="fill_vertical"/>
 
     <TextView
         android:id="@+id/listview_item_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:layout_gravity="center"
+        android:textSize="25sp"
         android:layout_marginLeft="30dp"
-        android:textStyle="bold" />
+        android:textStyle="bold|italic"
+        android:scaleType="fitCenter"
+        android:layout_gravity="center_horizontal"/>
+
+    <ImageView
+        android:id="@+id/listview_thumb"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:layout_marginLeft="100dp"
+        android:layout_gravity="end|fill_vertical"
+        android:maxWidth="50dp"
+        android:maxHeight="600dp"/>
 
 
 </LinearLayout>
